# onnx_websockets_pp

./: .dockerignore  .gitignore  CMakeLists.txt  COPYING  Dockerfile  Makefile  Pipfile  Readme.md  config.h  debug_utils.h  inference.cpp  inference.hpp  inference.py  main.cpp  main.py  mental_model.org  model_export.py
py_celery/: app.py  server.py  tasks.py  test.py
py_client/: inference.py
py_client/tests/: test_client.py
py_scripts/: main.py
src/: CMakeLists.txt  ampq.cpp  ampq.h  ampq_socket.h  callbacks.cpp  callbacks.h  config.h  debug_utils.h  json_utils.cpp  json_utils.h  main.cpp  main.cpp.baj  tasks.h
src/OnnxInferLib/: CMakeLists.txt  inference.cpp  inference.h  onnx_config.cpp  types.cpp  utils.cpp
src/OnnxInferLib/include/: inference.h  onnx_config.h  types.h  utils.h
src/amqp/: CMakeLists.txt  amqp.cpp  amqp.h  amqp_socket.cpp  amqp_socket.h  amqp_utils.cpp  amqp_utils.h  callbacks.cpp  callbacks.h  conn_handler.cpp  conn_handler.h  tasks.cpp  tasks.h  utils.cpp
src/utils/: CMakeLists.txt  debug_utils.h  json_utils.cpp  json_utils.h
tests/: CMakeLists.txt  test_ConnHandler.cpp  test_ConnHandlerFixture.cpp  test_ConnHandlerFixture.h  test_CustOnnxConfig.cpp  test_OnnxInferLib_utils.cpp  test_RedisConnection.cpp  test_Yolov11Session.cpp  test_Yolov11SessionFixture.h  test_cust_func.cpp  test_types.cpp
